<resources>
    <string name="app_name">DonorApp</string>
    <string name="ic_power_settings_new_black_24dp">Logout</string>
    <string name="usernamee">Emer Perdoruesi</string>
    <string name="password">Fjalekalim</string>
    <string name="retype_password">Rishkruaj Fjalekalimin</string>
    <string name="sign_in">Logohu</string>
    <string name="blood_text">Dikush ka nevoje per gjak?</string>
    <string name="city_selection">Kliko qytetin</string>
    <string name="notify">Dergo</string>
    <string name="blood_type">Kliko grupin e gjakut</string>
    <string name="qr_scan">Klikoni per te skanuar QR kodin</string>
    <string name="qr_scan_button">Skano</string>
    <string name="forgot_pass">Keni harruar fjalekalimin?</string>
    <string name="edit_prof">Modifiko Profilin</string>
    <string name="dhuruesit">Lista of Dhuruesve</string>
    <string name="home">Numri total i dhurimeve cdo muaj</string>


    <string name="emer">Emri</string>
    <string name="mbiemer">Mbiemri</string>
    <string name="email">Email</string>
    <string name="grup_gjaku">Grupi Gjakut</string>
    <string name="ditelindja">Ditelindja DD/MM/YY</string>
    <string name="qyteti">Qyteti</string>
    <string name="adresa">Adresa</string>
    <string name="telefon">Cel +355</string>
    <string name="personal_num">Numri Personal</string>
    <string name="shto_dhurim">Shto Dhurim</string>
    <string name="save">Ruaj</string>








    <string-array name="blood_array">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>0+</item>
        <item>0-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>

    <string-array name="country_array">
        <item>BERAT</item>
        <item>BULQIZË</item>
        <item>DELVINË</item>
        <item>DEVOLL</item>
        <item>DIBËR</item>
        <item>DURRËS</item>
        <item>ELBASAN</item>
        <item>FIER</item>
        <item>GJIROKASTËR</item>
        <item>GRAMSH</item>
        <item>HAS</item>
        <item>KAVAJË</item>
        <item>KOLONJË</item>
        <item>KORÇË</item>
        <item>KRUJË</item>
        <item>KUKËS</item>
        <item>KURBIN</item>
        <item>KUÇOVË</item>
        <item>LEZHË</item>
        <item>LIBRAZHD</item>
        <item>LUSHNJE</item>
        <item>MALLAKASTËR</item>
        <item>MAT</item>
        <item>MIRDITË</item>
        <item>PEQIN</item>
        <item>POGRADEC</item>
        <item>PUKË</item>
        <item>PËRMET</item>
        <item>SARANDË</item>
        <item>SHKODËR</item>
        <item>SKRAPAR</item>
        <item>TEPELENË</item>
        <item>TIRANË</item>
        <item>TROPOJË</item>
        <item>VLORË</item>

    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_lala">lala</string>

</resources>
