<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    tools:context="com.enterprise.activities.DetailActivity">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/dhurim"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/emri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:hint="@string/emer"
            android:inputType="textPersonName|textCapWords" />

        <EditText
            android:id="@+id/mbiemri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:hint="@string/mbiemer"
            android:inputType="textPersonName|textCapWords" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/bloodType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:drawableLeft="@drawable/ic_invert_colors_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/grup_gjaku"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:drawableLeft="@drawable/ic_today_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/ditelindja"
            android:inputType="date" />

        <EditText
            android:id="@+id/qyteti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:drawableLeft="@drawable/ic_location_city_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/qyteti"
            android:inputType="text|textCapWords" />

        <EditText
            android:id="@+id/adresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:drawableLeft="@drawable/ic_place_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/adresa"
            android:inputType="textMultiLine|textCapWords" />

        <EditText
            android:id="@+id/tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:drawableLeft="@drawable/ic_phone_android_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/telefon"
            android:inputType="number" />

        <EditText
            android:id="@+id/personalNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_credit_card_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/personal_num"
            android:inputType="text|number" />
    </LinearLayout>


    <Button
        android:id="@+id/dhurim"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_style"
        android:text="@string/shto_dhurim"
        android:textColor="@color/colorWhite" />


</RelativeLayout>
